fix: general z-index fixed in all components

--- a/src/components/FilterList/index.module.scss
+++ b/src/components/FilterList/index.module.scss
@@ -19,7 +19,8 @@
       padding: 0 1rem;
       background-color: white;
       border: 0;
-      box-shadow: 0 0 1px #d9ccf1;
+      box-shadow: 0 0 1.8px #d9ccf1;
+      cursor: pointer;
 
       p {
         padding: 0.5rem 0;
@@ -29,19 +30,72 @@
     .categories {
       @include flex-container($justify: space-around);
       padding: 0 1rem;
+      position: absolute;
+      z-index: 1;
+      background-color: white;
+      top: 127px;
+      width: 100%;
+      box-shadow: 0 0 1.8px #d9ccf1;
 
       .category {
         padding: 0.5rem 0;
+        position: relative;
+        cursor: pointer;
       }
     }
   }
 
   .filtersDiv {
-    @include flex-container($direction: column, $gap: 1rem);
+    @include flex-container($direction: column, $justify: space-evenly);
     padding: 0 2rem;
+    position: absolute;
+    z-index: 1;
+    background-color: white;
+    top: 158px;
+    width: 100%;
+    height: 12rem;
+    box-shadow: 0 0 1.8px #d9ccf1;
+
     .filter {
-      padding: 0.3rem 0.2rem;
+      padding: 0.15rem 0.2rem;
       box-shadow: 0 0 1px #d9ccf1;
+      cursor: pointer;
+    }
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .FilterList {
+    margin-bottom: 1.2rem;
+
+    .mainDiv {
+      .filterBtn {
+        padding: 0 1rem;
+
+        p {
+          padding: 0.5rem 0;
+        }
+      }
+
+      .categories {
+        @include flex-container($justify: space-around);
+        padding: 0 1rem;
+        top: 185px;
+        width: 100%;
+
+        .category {
+          padding: 0.5rem 0;
+        }
+      }
+    }
+
+    .filtersDiv {
+      top: 215px;
+      height: 12rem;
+
+      .filter {
+        padding: 0.15rem 0.2rem;
+      }
     }
   }
 }
