--- a/src/components/MakeupCard/index.module.scss
+++ b/src/components/MakeupCard/index.module.scss
@@ -13,6 +13,7 @@
   padding: 0 5px;
   vertical-align: top;
   position: relative;
+  z-index: 0;
 
   .imageDiv {
     width: auto;
